mainly map improvements

--- a/templates/coloring.handlebars
+++ b/templates/coloring.handlebars
@@ -4,7 +4,7 @@
         <input type="text" class="form-control bg-body w-25" value="{{this.regex}}" disabled="">
         <input type="text" class="form-control bg-body w-25" value="{{this.attr}}" disabled="">
         <input type="color" class="form-control-color" value="{{this.color}}" disabled="">
-        <button class="btn btn-outline-secondary removeColor" type="button" data-index="{{@index}}" data-regex="{{this.regex}}" data-attr="{{this.attr}}" data-color="{{this.color}}"><i class="bi bi-x-lg"></i></button>
+        <button class="btn btn-outline-danger removeColor" type="button" data-index="{{@index}}" data-regex="{{this.regex}}" data-attr="{{this.attr}}" data-color="{{this.color}}"><i class="bi bi-x-lg"></i></button>
     </div>
 </li>
 {{/each}}
